// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThrottleScroller 需要滚动条 HTML结构 1`] = `
.c4 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c5:hover {
  background-color: #7a7a7a;
}

.c2 {
  width: 24em;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  height: 4.166666666666667em;
  width: 25em;
  position: relative;
}

.c0:hover .c6 {
  opacity: 1;
}

.c3 {
  width: 24em;
  position: absolute;
  display: inline-block;
  left: 24em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c3 {
  opacity: 1;
}

<div
  className="c0 c1"
  onWheel={[Function]}
>
  <div
    className="c2"
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "4.166666666666667em",
        }
      }
    >
      <div
        className="c5"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "1.1666666666666667em",
            "top": "0em",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ThrottleScroller 需要滚动条 HTML结构 children 1`] = `
.c4 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c5:hover {
  background-color: #7a7a7a;
}

.c2 {
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c3 {
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
  left: 19.833333333333336em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c3 {
  opacity: 1;
}

.c0:hover .c6 {
  opacity: 1;
}

<div
  className="c0 c1"
  onWheel={[Function]}
>
  <div
    className="c2"
  >
    <div>
      <div>
        title0
      </div>
      <div>
        title1
      </div>
      <div>
        title2
      </div>
      <div>
        title3
      </div>
      <div>
        title4
      </div>
      <div>
        title5
      </div>
      <div>
        title6
      </div>
      <div>
        title7
      </div>
      <div>
        title8
      </div>
      <div>
        title9
      </div>
      <div>
        title10
      </div>
      <div>
        title11
      </div>
      <div>
        title12
      </div>
      <div>
        title13
      </div>
      <div>
        title14
      </div>
      <div>
        title15
      </div>
      <div>
        title16
      </div>
      <div>
        title17
      </div>
      <div>
        title18
      </div>
      <div>
        title19
      </div>
      <div>
        title20
      </div>
      <div>
        title21
      </div>
      <div>
        title22
      </div>
      <div>
        title23
      </div>
      <div>
        title24
      </div>
      <div>
        title25
      </div>
      <div>
        title26
      </div>
      <div>
        title27
      </div>
      <div>
        title28
      </div>
      <div>
        title29
      </div>
      <div>
        title30
      </div>
      <div>
        title31
      </div>
      <div>
        title32
      </div>
      <div>
        title33
      </div>
      <div>
        title34
      </div>
      <div>
        title35
      </div>
      <div>
        title36
      </div>
      <div>
        title37
      </div>
      <div>
        title38
      </div>
      <div>
        title39
      </div>
      <div>
        title40
      </div>
      <div>
        title41
      </div>
      <div>
        title42
      </div>
      <div>
        title43
      </div>
      <div>
        title44
      </div>
      <div>
        title45
      </div>
      <div>
        title46
      </div>
      <div>
        title47
      </div>
      <div>
        title48
      </div>
      <div>
        title49
      </div>
      <div>
        title50
      </div>
      <div>
        title51
      </div>
      <div>
        title52
      </div>
      <div>
        title53
      </div>
      <div>
        title54
      </div>
      <div>
        title55
      </div>
      <div>
        title56
      </div>
      <div>
        title57
      </div>
      <div>
        title58
      </div>
      <div>
        title59
      </div>
      <div>
        title60
      </div>
      <div>
        title61
      </div>
      <div>
        title62
      </div>
      <div>
        title63
      </div>
      <div>
        title64
      </div>
      <div>
        title65
      </div>
      <div>
        title66
      </div>
      <div>
        title67
      </div>
      <div>
        title68
      </div>
      <div>
        title69
      </div>
      <div>
        title70
      </div>
      <div>
        title71
      </div>
      <div>
        title72
      </div>
      <div>
        title73
      </div>
      <div>
        title74
      </div>
      <div>
        title75
      </div>
      <div>
        title76
      </div>
      <div>
        title77
      </div>
      <div>
        title78
      </div>
      <div>
        title79
      </div>
      <div>
        title80
      </div>
      <div>
        title81
      </div>
      <div>
        title82
      </div>
      <div>
        title83
      </div>
      <div>
        title84
      </div>
      <div>
        title85
      </div>
      <div>
        title86
      </div>
      <div>
        title87
      </div>
      <div>
        title88
      </div>
      <div>
        title89
      </div>
      <div>
        title90
      </div>
      <div>
        title91
      </div>
      <div>
        title92
      </div>
      <div>
        title93
      </div>
      <div>
        title94
      </div>
      <div>
        title95
      </div>
      <div>
        title96
      </div>
      <div>
        title97
      </div>
      <div>
        title98
      </div>
      <div>
        title99
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "20.833333333333336em",
        }
      }
    >
      <div
        className="c5"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "2.5833333333333335em",
            "top": "0em",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ThrottleScroller 需要滚动条 HTML结构 theme is default data is 10 len 1`] = `
<div>
  1
</div>
`;

exports[`ThrottleScroller 需要滚动条 HTML结构 theme is default data is 100 len 1`] = `
.c4 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c5:hover {
  background-color: #7a7a7a;
}

.c2 {
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c3 {
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
  left: 19.833333333333336em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c3 {
  opacity: 1;
}

.c0:hover .c6 {
  opacity: 1;
}

<div
  className="c0 c1"
  onWheel={[Function]}
>
  <div
    className="c2"
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "20.833333333333336em",
        }
      }
    >
      <div
        className="c5"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "2.5833333333333335em",
            "top": "0em",
          }
        }
      />
    </div>
  </div>
</div>
`;
